--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
+    />
+
+    <!----------------------- Google Icon CSS ------------------------>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
 
     <!----------------------- Fontawesome CSS ------------------------>
@@ -22,17 +29,19 @@
     <!----------------------- Custom CSS ------------------------>
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Simple2Call | Simple2Save</title>
+    <title>Simple2Call</title>
   </head>
   <body>
     <!---------------------- Navbar Start ---------------------->
 
     <header class="header">
-      <nav class="navbar navbar-expand-lg text-white">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand text-white site-name" href="#">
-            Simple2Call
-          </a>
+          <!-- <img src="svgs/logo.svg" alt=""> -->
+          <span class="material-symbols-outlined mx-3 logo">
+            video_audio_call
+          </span>
+          <a class="navbar-brand site-name" href="#"> Simple2Call </a>
 
           <button
             class="navbar-toggler"
@@ -47,18 +56,18 @@
           </button>
 
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto my-navbar">
               <li class="nav-item">
-                <a class="nav-link text-white mx-1" href="#">Home</a>
+                <a class="nav-link mx-1" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white mx-1" href="#">Services</a>
+                <a class="nav-link mx-1" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white mx-1" href="#">Careers</a>
+                <a class="nav-link mx-1" href="#">Careers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white mx-1" href="#">Our Team</a>
+                <a class="nav-link mx-1" href="#">Our Team</a>
               </li>
             </ul>
           </div>
@@ -69,20 +78,202 @@
 
     <!---------------------- Welcome Section Start ---------------------->
 
-    <section class="welcome-section">
-      <div class="container-fluid welcome-image">
-    
-      </div>
-    </section>
+    <div class="page container mt-5">
+      <section class="welcome-section">
+        <div class="container">
+          <div class="row align-item-center">
+            <div class="title-block col-lg-12">
+              <h1 class="tagline-1">
+                Simplifying Communication For Industry Leaders
+              </h1>
+            </div>
+            <div class="subtitle-block">
+              <h3 class="subtitle mt-3">
+                We help you to achieve the best customer service by providing
+                versatile communication technologies
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <!---------------------- Welcome Section Ends ---------------------->
 
-    <div class="container-fluid"></div>
+    <!-------------------- Our Spaciality Block Start ---------------------->
+
+    <section class="spaciality-section">
+      <div class="container">
+        <div class="spaciality-section-header text-center">
+          <h2 class="spaciality-section-title">Why Choose Simple2Call</h2>
+          <hr />
+        </div>
+      </div>
+      <div class="container">
+        <div class="row spaciality-row text-center">
+          <div class="col-lg-3">
+            <div class="spaciality-item mb-5 mb-lg-0">
+              <div class="spaciality-icon spaciality-1">
+                <i class="fa-solid fa-microphone-lines"></i>
+              </div>
+              <h5 class="spaciality-name">Crystal Clear Voice</h5>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="spaciality-item mb-5 mb-lg-0">
+              <div class="spaciality-icon spaciality-2">
+                <i class="fa-solid fa-circle-nodes"></i>
+              </div>
+              <h5 class="spaciality-name">Carrier Grade Platform</h5>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="spaciality-item mb-5 mb-lg-0">
+              <div class="spaciality-icon spaciality-3">
+                <i class="fa-solid fa-arrow-up-right-dots"></i>
+              </div>
+              <h5 class="spaciality-name">Scalable Infrastructure</h5>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="spaciality-item mb-5 mb-lg-0">
+              <div class="spaciality-icon spaciality-4">
+                <i class="fa-solid fa-microchip"></i>
+              </div>
+              <h5 class="spaciality-name">Versatile Technology</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!------------------- Our Spaciality Block Ends -------------------->
+
+    <!------------------- What We Offer Section Starts -------------------->
+
+    <section class="what-we-offer-section">
+      <div class="container">
+        <div class="what-we-offer-section-header text-center">
+          <h2 class="what-we-offer-section-title">What We Offer</h2>
+          <hr />
+        </div>
+      </div>
+      <!------------------ Card One --------------------->
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 mt-4">
+            <div class="what-we-offer-card-1">
+              <div class="what-we-offer-container-1">
+                <h2 class="card-title-1">Cloud Collaboration</h2>
+                <ul class="list-unstyled">
+                  <li class="card-content-1 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Global Audio Conference
+                  </li>
+                  <li class="card-content-1 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Event Conference
+                  </li>
+                  <li class="card-content-1 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Investor Relations Conference
+                  </li>
+                  <li class="card-content-1 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Screen & App-share
+                  </li>
+                  <li class="card-content-1 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Interactive Webinar
+                  </li>
+                  <li class="card-content-1 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Unified Conference
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!------------------ Card Two --------------------->
+          <div class="col-lg-4 mt-4">
+            <div class="what-we-offer-card-2">
+              <div class="what-we-offer-container-2">
+                <h2 class="card-title-2">Cloud Telephony</h2>
+                <ul class="list-unstyled">
+                  <li class="card-content-2 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Inbound & Outbound Numbers
+                  </li>
+                  <li class="card-content-2 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Multi-layer IVR
+                  </li>
+                  <li class="card-content-2 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Contact Center
+                  </li>
+                  <li class="card-content-2 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Call Recording
+                  </li>
+                  <li class="card-content-2 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    API for CRM Integration
+                  </li>
+                  <li class="card-content-2 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Custom Voice Solution
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!------------------ Card Three --------------------->
+          <div class="col-lg-4 mt-4">
+            <div class="what-we-offer-card-3">
+              <div class="what-we-offer-container-3">
+                <h2 class="card-title-3">Cloud SIP Trunk</h2>
+                <ul class="list-unstyled">
+                  <li class="card-content-3 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Private or Public IP Connectivity
+                  </li>
+                  <li class="card-content-3 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    India Access Number
+                  </li>
+                  <li class="card-content-3 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    90 countries Local Number
+                  </li>
+                  <li class="card-content-3 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    140 countries Toll Free
+                  </li>
+                  <li class="card-content-3 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Global Dial-out
+                  </li>
+                  <li class="card-content-3 pb-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Value added services
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!------------------- What We Offer Section Ends -------------------->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
   </body>
