What we offer section completed

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
     <section class="spaciality-section">
       <div class="container">
         <div class="spaciality-section-header text-center">
-          <h2 class="spaciality-section-title">Why Choose Simple2Call</h2>
-          <hr />
+          <h2 class="spaciality-section-title">Our Spaciality</h2>
         </div>
       </div>
       <div class="container">
@@ -147,7 +146,6 @@
         </div>
       </div>
     </section>
-    <!------------------- Our Spaciality Block Ends -------------------->
 
     <!------------------- What We Offer Section Starts -------------------->
 
@@ -155,7 +153,6 @@
       <div class="container">
         <div class="what-we-offer-section-header text-center">
           <h2 class="what-we-offer-section-title">What We Offer</h2>
-          <hr />
         </div>
       </div>
       <!------------------ Card One --------------------->
@@ -269,6 +266,44 @@
     </section>
 
     <!------------------- What We Offer Section Ends -------------------->
+
+    <!----------------------- Who we are section Starts ------------------------>
+
+    <div class="container">
+      <section class="who-we-are-section">
+        <div class="who-we-are-container d-flex align-items-center">
+          <div class="row">
+            <div class="col-lg-4">
+              <h1 class="who-we-are-title text-white">Who we</h1>
+              <h1 class="who-we-are-title text-white">Are?</h1>
+            </div>
+            <div class="col-lg-8">
+              <p class="text-white who-we-are-text">
+                We are NJ headquartered, privately held business in service for
+                35+ years and in international telecoms for 25+ years. We have
+                strategic alliance with service providers in USA, Singapore,
+                India and Australia-NZ for using Simple2Call technology platform
+                and brand. Our team comprises of experienced telecom and
+                technology professionals in new business development,
+                international telecoms and operations. We have been working on
+                cutting edge technology solutions in collaboration &telephony
+                space through our research and product development centre based
+                in NJ, USA.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!----------------------- Who we are section Ends ------------------------>
+
+    <!----------------------- Our Customers section Ends ------------------------>
+    <div class="container">
+      <section class="Our Customers">
+        <h1 class="text-center">Our Customers</h1>
+      </section>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
