What we offer card completed

--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 
     <!----------------------- Our Customers section Ends ------------------------>
     <div class="container">
-      <section class="Our Customers">
-        <h1 class="text-center">Our Customers</h1>
+      <section class="customer-section">
+        <h1 class="customer-section-title text-center">Our Customers</h1>
       </section>
     </div>
 
