Our Customer Section Ongoing

--- a/index.html
+++ b/index.html
@@ -301,7 +301,43 @@
     <!----------------------- Our Customers section Ends ------------------------>
     <div class="container">
       <section class="customer-section">
-        <h1 class="customer-section-title text-center">Our Customers</h1>
+        <h1 class="customer-section-title text-center">Trusted by the world's best</h1>
+
+        <div class="row text-center">
+          <div class="col-lg-4 mt-4 customer-col-1">
+            <img class="logo-1" src="images/logo-1.png" alt="VI" />
+          </div>
+          <div class="col-lg-4 mt-4 customer-col-2">
+            <img class="logo-2" src="images/logo-2.png" alt="airtel" />
+          </div>
+          <div class="col-lg-4 mt-4 customer-col-3">
+            <img class="logo-3" src="images/logo-3.png" alt="google" />
+          </div>
+        </div>
+
+        <div class="row mt-5 text-center">
+          <div class="col-lg-4 mt-4 customer-col-4">
+            <img class="logo-4" src="images/logo-4.png" alt="VI" />
+          </div>
+          <div class="col-lg-4 mt-4 customer-col-5">
+            <img class="logo-5" src="images/logo-5.png" alt="airtel" />
+          </div>
+          <div class="col-lg-4 mt-4 customer-col-6">
+            <img class="logo-6" src="images/logo-6.png" alt="google" />
+          </div>
+        </div>
+
+        <div class="row mt-5 text-center">
+          <div class="col-lg-4 mt-4 customer-col-7">
+            <img class="logo-7" src="images/logo-7.png" alt="VI" />
+          </div>
+          <div class="col-lg-4 mt-4 customer-col-8">
+            <img class="logo-8" src="images/logo-8.png" alt="airtel" />
+          </div>
+          <div class="col-lg-4 mt-4 customer-col-9">
+            <img class="logo-9" src="images/logo-9.png" alt="google" />
+          </div>
+        </div>
       </section>
     </div>
 
