Our Customers Work in ongoing

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="row">
             <div class="col-lg-4">
               <h1 class="who-we-are-title text-white">Who we</h1>
-              <h1 class="who-we-are-title text-white">Are?</h1>
+              <h1 class="who-we-are-title text-white">Are</h1>
             </div>
             <div class="col-lg-8">
               <p class="text-white who-we-are-text">
@@ -301,7 +301,9 @@
     <!----------------------- Our Customers section Ends ------------------------>
     <div class="container">
       <section class="customer-section">
-        <h1 class="customer-section-title text-center">Trusted by the world's best</h1>
+        <h1 class="customer-section-title text-center">
+          Trusted by the world's best
+        </h1>
 
         <div class="row text-center">
           <div class="col-lg-4 mt-4 customer-col-1">
@@ -349,3 +351,5 @@
     ></script>
   </body>
 </html>
+
+
