--- a/index.html
+++ b/index.html
@@ -308,37 +308,37 @@
 
         <div class="row text-center">
           <div class="col-lg-4 mt-4 customer-col-1">
-            <img class="logo-1" src="images/logo-1.png" alt="VI" />
+            <img class="customer-logo" src="images/logo-1.png" alt="VI" />
           </div>
           <div class="col-lg-4 mt-4 customer-col-2">
-            <img class="logo-2" src="images/logo-2.png" alt="airtel" />
+            <img class="customer-logo" src="images/logo-2.png" alt="airtel" />
           </div>
           <div class="col-lg-4 mt-4 customer-col-3">
-            <img class="logo-3" src="images/logo-3.png" alt="google" />
+            <img class="customer-logo" src="images/logo-3.png" alt="google" />
           </div>
         </div>
 
         <div class="row mt-5 text-center">
           <div class="col-lg-4 mt-4 customer-col-4">
-            <img class="logo-4" src="images/logo-4.png" alt="VI" />
+            <img class="customer-logo" src="images/logo-4.png" alt="VI" />
           </div>
           <div class="col-lg-4 mt-4 customer-col-5">
-            <img class="logo-5" src="images/logo-5.png" alt="airtel" />
+            <img class="customer-logo" src="images/logo-5.png" alt="airtel" />
           </div>
           <div class="col-lg-4 mt-4 customer-col-6">
-            <img class="logo-6" src="images/logo-6.png" alt="google" />
+            <img class="customer-logo" src="images/logo-6.png" alt="google" />
           </div>
         </div>
 
         <div class="row mt-5 text-center">
           <div class="col-lg-4 mt-4 customer-col-7">
-            <img class="logo-7" src="images/logo-7.png" alt="VI" />
+            <img class="customer-logo" src="images/logo-7.png" alt="VI" />
           </div>
           <div class="col-lg-4 mt-4 customer-col-8">
-            <img class="logo-8" src="images/logo-8.png" alt="airtel" />
+            <img class="customer-logo" src="images/logo-8.png" alt="airtel" />
           </div>
           <div class="col-lg-4 mt-4 customer-col-9">
-            <img class="logo-9" src="images/logo-9.png" alt="google" />
+            <img class="customer-logo" src="images/logo-9.png" alt="google" />
           </div>
         </div>
       </section>
@@ -349,9 +349,7 @@
     <!----------------------- Why Choose Us section Starts ------------------------>
 
     <div class="container">
-      <h1 class="why-choose-us-section-title text-center">
-        Why Choose Us
-      </h1>
+      <h1 class="why-choose-us-section-title text-center">Why Choose Us</h1>
       <section class="why-choose-us-section">
         <div class="why-choose-us-container-1">
           <div class="row h-100">
@@ -394,6 +392,71 @@
     </div>
 
     <!----------------------- Why Choose Us section Ends ------------------------>
+
+    <!-- Remove the container if you want to extend the Footer to full width. -->
+
+    <footer class="my-footer text-center text-white">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #3b5998"
+            href="#!"
+            role="button"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <!-- Twitter -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #55acee"
+            href="#!"
+            role="button"
+            ><i class="fab fa-twitter"></i
+          ></a>
+
+          <!-- Google -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #dd4b39"
+            href="#!"
+            role="button"
+            ><i class="fab fa-google"></i
+          ></a>
+
+          <!-- Instagram -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #ac2bac"
+            href="#!"
+            role="button"
+            ><i class="fab fa-instagram"></i
+          ></a>
+
+          <!-- Linkedin -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #0082ca"
+            href="#!"
+            role="button"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 1)">
+        © 2022 Copyright: Simple2Call, Inc.
+      </div>
+      <!-- Copyright -->
+    </footer>
+
+    <!-- End of .container -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
